# InfinityEngine

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.ps1  setupDev.bat  setupRelease.bat
Engine/: CMakeLists.txt  conanfile.txt
Engine/Content/: Arial.asset  CompactCS.asset  Cube.001.asset  CubeTemplate.asset  Cylinder.001.asset  DefaultMaterial.asset  DefaultShader.asset  DefaultWidgetMaterial.asset  DefaultWidgetShader.asset  DemoGame.asset  DemoLevel.asset  DroneTemplate.asset  EditorAssetMap.asset  EditorAssetMap.pak  EnemySpawner.asset  EnemyTemplate.asset  EntityTemplateTest.asset  FloorTemplate.asset  ForwardPlusCullingCS.asset  FriendlySpawner.asset  FriendlyTemplate.asset  InitForwardPlusCS.asset  LevelEditGame.asset  Plane.001.asset  ProjectSettings.asset  Projectile.asset  RedMaterial.asset  SortCS.asset  SwarmDrone.asset  SwarmDrone_COL.asset  TestGame.asset  UIQuad.asset
Engine/Content/Fonts/Arial/: ArialItalic.spritefont  ArialStrikeout.spritefont  ArialUnderline.spritefont
Engine/Content/Shaders/: CMakeLists.txt  CompactSMInstances.hlsl  CullingWorkGraph.hlsl  DefaultShader.hlsl  DefaultWidgetShader.hlsl  ForwardPlusCore.hlsl  ForwardPlusCulling.hlsl  InitializeForwardPlus.hlsl  Math.hlsl  Red.hlsl  ShaderCore.hlsl  SortSMInstances.hlsl  WidgetShaderLibrary.hlsl
Engine/Logs/: Log.txt  ReflectionLog.txt
Engine/Source/: Asset.cpp  Asset.h  AssetPtr.h  AssetPtrBase.cpp  AssetPtrBase.h  BoundingBox.cpp  BoundingBox.h  BoundingBox2D.cpp  BoundingBox2D.h  BucketArray.h  Core.h  CoreMinimal.h  Delegate.h  DemoGame.cpp  DemoGame.h  Enum.cpp  Enum.h  EnumRegistry.cpp  EnumRegistry.h  EventQueue.cpp  EventQueue.h  FNV1a.cpp  FNV1a.h  Frustum.cpp  Frustum.h  Game.cpp  Game.h  IDGenerator.cpp  IDGenerator.h  ISerializeable.h  IValidateable.h  Importer.h  Level.cpp  Level.h  LevelEditorGame.cpp  LevelEditorGame.h  Logger.cpp  Logger.h  MaterialParameterTypes.cpp  MaterialParameterTypes.h  (+51 more)
Engine/Source/Containers/: BorrowedManagedBuffer.h  BucketArray.h  DArray.h  DynamicGPUBuffer.h  DynamicGPUBuffer2.h  GPUBuffer.cpp  GPUBuffer.h  LockFreeQueue.h  ManagedBuffer.h  ObjectTypeMap.cpp  ObjectTypeMap.h  SparseArray.h  SparseUniformGrid3D.h
Engine/Source/Containers/Spatialization/: HitTestGrid.h  UniformGrid2D.h
Engine/Source/ECS/: Archetype.cpp  Archetype.h  DirtyTracker.cpp  DirtyTracker.h  ECSQuery.cpp  ECSQuery.h  Entity.cpp  Entity.h  EntityList.cpp  EntityList.h  EntityListGraph.cpp  EntityListGraph.h  EntityTemplate.cpp  EntityTemplate.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  SystemScheduler.cpp  SystemScheduler.h  World.cpp  World.h
Engine/Source/ECS/Components/: CCamera.cpp  CCamera.h  CCollider.cpp  CCollider.h  CFloatingControl.cpp  CFloatingControl.h  CHealth.h  CLevelEdit.cpp  CLevelEdit.h  CLevelStreamingInvoker.cpp  CLevelStreamingInvoker.h  CPathfinding.cpp  CPathfinding.h  CPointLight.cpp  CPointLight.h  CProjectile.h  CRigidBody.cpp  CRigidBody.h  CSpawner.h  CStaticMesh.h  CTargeting.h  CTeamMember.h  CTransform.h  Component.h
Engine/Source/ECS/Systems/: CameraSystem.cpp  CameraSystem.h  FloatingControlSystem.cpp  FloatingControlSystem.h  HealthSystem.cpp  HealthSystem.h  LevelEditorSystem.cpp  LevelEditorSystem.h  LevelStreamingSystem.cpp  LevelStreamingSystem.h  PathfindingSystem.cpp  PathfindingSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PointLightSystem.cpp  PointLightSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  SpawnerSystem.cpp  SpawnerSystem.h  StaticMeshRenderingSystem.cpp  StaticMeshRenderingSystem.h  System.cpp  System.h  TargetingSystem.cpp  TargetingSystem.h
Engine/Source/Engine/: Engine.cpp  Engine.h
Engine/Source/Engine/Subsystems/: AssetManager.cpp  AssetManager.h  EngineSubsystem.cpp  EngineSubsystem.h  GameplaySubsystem.cpp  GameplaySubsystem.h  InputSubsystem.cpp  InputSubsystem.h  RenderingSubsystem.cpp  RenderingSubsystem.h
Engine/Source/Filesystem/: DirectoryChangeListenerBase.cpp  DirectoryChangeListenerBase.h  ShaderChangeListener.cpp  ShaderChangeListener.h  WindowsDirectoryChangeListener.cpp  WindowsDirectoryChangeListener.h
Engine/Source/Math/: Math.cpp  Math.h  MathFwd.h  Transform.cpp  Transform.h  Transform2D.cpp  Transform2D.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Engine/Source/Rendering/: Delegate.h  Font.cpp  Font.h  ForwardPlusCore.h  IDynamicGPUBufferProxy.h  InstanceBuffer.cpp  InstanceBuffer.h  Material.cpp  Material.h  MaterialParameterMap.cpp  MaterialParameterMap.h  MaterialParameterRenderingData.cpp  MaterialParameterRenderingData.h  MaterialRenderingData.cpp  MaterialRenderingData.h  PointLight.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  StaticMesh.cpp  StaticMesh.h  StaticMeshInstance.cpp  StaticMeshInstance.h  StaticMeshRenderingData.cpp  StaticMeshRenderingData.h  Texture.cpp  Texture.h  UIStatics.cpp  UIStatics.h  Widget.cpp  Widget.h  Window.cpp  Window.h
Engine/Source/Rendering/DX12/: CompactSMInstancesComputeShader.cpp  CompactSMInstancesComputeShader.h  ConstantBuffer.cpp  ConstantBuffer.h  CullingWorkGraph.cpp  CullingWorkGraph.h  DX12ComputeShader.cpp  DX12ComputeShader.h  DX12GPUBuffer.cpp  DX12GPUBuffer.h  DX12Material.cpp  DX12Material.h  DX12MaterialParameterMap.cpp  DX12MaterialParameterMap.h  DX12MaterialParameterRenderingData.cpp  DX12MaterialParameterRenderingData.h  DX12MaterialRenderingData.cpp  DX12MaterialRenderingData.h  DX12RenderTarget.cpp  DX12RenderTarget.h  DX12RenderingCore.h  DX12RenderingSubsystem.cpp  DX12RenderingSubsystem.h  DX12Shader.cpp  DX12Shader.h  DX12ShaderBase.cpp  DX12ShaderBase.h  DX12StaticMesh.cpp  DX12StaticMesh.h  DX12StaticMeshRenderingData.cpp  DX12StaticMeshRenderingData.h  (+30 more)
Engine/Source/Spatialization/: HitTestGrid.h  UniformGrid2D.h
Engine/Visualizers/: DArray.natvis  Vector2.natvis  Vector3.natvis  Vector4.natvis
ReflectionTool/: CMakeLists.txt
ReflectionTool/Source/: ReflectionGenerator.cpp  ReflectionGenerator.h  ReflectionInitializer.cpp  ReflectionInitializer.h  ReflectionLexer.cpp  ReflectionLexer.h  ReflectionParser.cpp  ReflectionParser.h  Util.cpp  Util.h  main.cpp
(+52 files in other folders)
